2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_permute_vertices) : added

	* src/blicc.cc (igraph_canonical_permutation) : added

2008-01-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/community.c (igraph_modularity) : added weights argument

	* interfaces/python/src/graphobject.c : adjusted Graph.modularity to
	support weights

	* interfaces/R/src/rinterface.c.in : added null weight argument to
	igraph_modularity call

2008-01-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.v (igraph_revolver_probs_ADE) 
	(igraph_revolver_probs_ADE_dpareto) : added

2007-12-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_df) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_f) : use random order of 
	edges 

2007-12-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_f) : always check edges 
	in decreasing order

2007-12-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_ADE_dpareto_evalf) : added

2007-12-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_adjacent) : added
	
	* interfaces/python/package/__init__.py :
	(Graph.get_adjlist, Graph.get_adjedgelist) : added
	
	* interfaces/python/package/test/basic.py : added tests

2007-12-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_{count,get}_[sub]isomorphisms) : added
	
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_subisomorphic) : added
	
	* interfaces/python/package/test/isomorphism.py : added tests

2007-12-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_DE)
	(igraph_revolver_ml_DE_alpha_a, igraph_revolver_ml_ADE_
	(igraph_revolver_ml_ADE_alpha_a_beta, igraph_revolver_ml_ADE_dpareto)
	(igraph_revolver_ml_ADE_dpareto_eval) : added

2007-12-03  Gabor Csardi  <csardi@rmki.kfki.hu>
