@@ -1175,6 +1175,9 @@ int igraph_get_subisomorphisms_vf2(const igraph_t *graph1,
 int igraph_canonical_permutation(const igraph_t *graph, igraph_vector_t *labeling);
 int igraph_permute_vertices(const igraph_t *graph, igraph_t *res,
 			    const igraph_vector_t *permutation);
+int igraph_isomorphic_bliss(const igraph_t *graph1, const igraph_t *graph2, 
+			    igraph_bool_t *iso, igraph_vector_t *map12, 
+			    igraph_vector_t *map21);
 
 /* -------------------------------------------------- */
 /* Graph motifs                                       */
